[package]
name = "lcdsnake"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
atomic_enum = "0.3.0"
critical-section = "1.2.0"
embassy-executor = "0.6.0"
embassy-time = "0.3.2"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.0", features = ["esp32"] }
esp-hal-embassy = { version = "0.4.0", features = [
    "esp32",
    "integrated-timers",
    "log",
] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
fugit = "0.3.7"
itoa = "1.0.11"
log = { version = "0.4.22" }
ssd1306 = { version = "0.9.0", features = [
    "async",
    "graphics",
    "embedded-graphics-core",
] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
